--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     color: white;
     margin-top: 40px;
 }
-.container1 p{
+.container1 p, ul{
     font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
     color: white;
@@ -20,8 +20,8 @@
 }
 .logo{
     display: block;
-    max-width: 150px;
-
+    margin: auto;
+    max-width: 250px;
 }
 
 body{
@@ -29,4 +29,8 @@ body{
     background-size: 1500px;
     background-repeat: no-repeat;
     margin: 50px;
+}
+
+footer{
+    color: white;
 }
