--- a/styleWikiGPC.css
+++ b/styleWikiGPC.css
@@ -8,14 +8,14 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
     color: white;
-    background-color: rgba(77, 76, 76, 0.712);
+    background-color: rgba(54, 54, 54, 0.89);
     border: 1px solid rgb(215, 137, 235);
 }
 .container1 h2{
     font-family: Arial, Helvetica, sans-serif;
     font-size:larger;
     color: white;
-    background-color: rgba(77, 76, 76, 0.712);
+    background-color: rgba(54, 54, 54, 0.89);
     border: 1px solid rgb(215, 137, 235);
 }
 .logo{
@@ -25,7 +25,7 @@
 }
 
 body{
-    background-image: url(https://thumbs.dreamstime.com/b/fiery-nebula-cosmic-cloudscape-stellar-background-362804266.jpg?w=992);
+    background-image:url("Imagens/fundoWiki.jpg");
     background-size: 1500px;
     background-repeat: no-repeat;
     margin: 50px;
@@ -33,4 +33,11 @@ body{
 
 footer{
     color: white;
+}
+
+a{
+    color:aquamarine;
+}
+a:hover,a:active{
+    color:rgb(218, 81, 218)
 }
