Github pages is finally working, uptaded texts,fixed issue where background wouldn't cover the entire screen

--- a/styleWikiGPC.css
+++ b/styleWikiGPC.css
@@ -26,7 +26,7 @@
 
 body{
     background-image:url("Imagens/fundoWiki.jpg");
-    background-size: 1500px;
+    background-size: cover;
     background-repeat: no-repeat;
     margin: 50px;
 }
