--- a/styleCriadores.css
+++ b/styleCriadores.css
@@ -9,8 +9,9 @@
 
 body{
     background-image:url("Imagens/fundoWiki.jpg");
-    background-size: 1500px;
+    background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     margin: 50px;
 }
 
@@ -22,6 +23,7 @@ h3{
     border: 1px solid rgb(215, 137, 235);
     text-align: center;
 }
+
 
 article,a{
     font-family: Arial, Helvetica, sans-serif;
