--- a/styleCriadores.css
+++ b/styleCriadores.css
@@ -32,4 +32,5 @@ article,a{
     background-color: rgba(54, 54, 54, 0.89);
     border: 1px solid rgb(215, 137, 235); 
     margin-top: -10px;
+    padding: 10px;
 }
