--- a/styleCriadores.css
+++ b/styleCriadores.css
@@ -15,6 +15,15 @@ body{
     margin: 50px;
 }
 
+.tituloComImagem {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Espaço entre o título e a imagem */
+}
+.tituloComImagem img{
+    width: 50px;
+}
+
 h3{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size:larger;
