--- a/styleWikiGPC.css
+++ b/styleWikiGPC.css
@@ -10,6 +10,7 @@
     color: white;
     background-color: rgba(54, 54, 54, 0.89);
     border: 1px solid rgb(215, 137, 235);
+    padding-bottom: 20px;
 }
 .container1 h2{
     font-family: Arial, Helvetica, sans-serif;
